# AI-Provenance-Tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PRODUCT_HUNT.md  PROJECT_BRIEF.md  README.md  SECURITY.md  calibration-summary.md  docker-compose.dev.yml  docker-compose.spark.images.yml  docker-compose.spark.yml  docker-compose.yml  funding.json
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 66cbf0fe8d26_create_analyses_table.py  9d9f3c2e7f11_create_audit_events_table.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/detection/: __init__.py
backend/app/middleware/: audit.py  cache_headers.py  error_handlers.py  rate_limiter.py
backend/app/models/: __init__.py  detection.py  social.py  x_intel.py
backend/evidence/: labels_template.json
backend/scripts/: benchmark_x_intel.py  build_talent_visa_evidence_pack.py  build_text_hard_negative_dataset.py  build_text_training_dataset.py  check_text_quality_gate.py  collect_x_input.py  compare_talent_visa_runs.py  evaluate_detection_calibration.py  generate_x_trust_report.py  run_talent_visa_pipeline.py  run_weekly_talent_visa_cycle.py  smoke_detect_prod.py  smoke_hive_adapter.py  smoke_reality_defender_adapter.py  sweep_text_training.py  train_text_detector.py
backend/tests/: __init__.py  conftest.py  test_analysis_store.py  test_api_endpoints.py  test_audio_detector.py  test_audit_events.py  test_benchmark_profile_controls.py  test_build_text_hard_negative_dataset.py  test_c2pa_verifier.py  test_c2pa_verifier_extended.py  test_calibration_script.py  test_cost_governance_snapshot_policy.py  test_evaluation_store_extended.py  test_health_and_cache.py  test_image_detector.py  test_image_preprocessing.py  test_metrics.py  test_middleware.py  test_package_policy_script.py  test_provider_consensus_hive.py  test_provider_consensus_reality_defender.py  test_public_parity_report_script.py  test_release_provenance_note_script.py  test_runner_heartbeat_script.py  test_scheduler_helpers.py  test_schema_constants.py  test_schemas.py  test_smoke_detect_prod_script.py  test_social_api.py  test_sweep_text_training_script.py  test_text_detection.py  test_text_detector_golden_pairs.py  test_text_quality_gate_script.py  test_trust_report.py  test_video_detector.py  test_webhook_dispatcher.py  test_worker.py  test_x_intel_collection.py
docs/: API.md  (+13 more)
(+552 files in other folders)
